refactor(tests): markup fixes

--- a/test/inline-code.html
+++ b/test/inline-code.html
@@ -1,38 +1,43 @@
-<html>
-<head>
-<title>Dappspec Test</title>
-<link rel="stylesheet" href="dappspec.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-<div class="container">
-  <article>
-    <h1>Inline - Code</h1>
-    <p>
-      This is a test of the code-related inline classes found in
-      <span class="file">_inline.sass</span>.
-    </p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Dappspec Test</title>
+    <link rel="stylesheet" href="dappspec.css" />
+    <meta name="viewport" content="width=device-width" />
+  </head>
+  <body>
+    <div class="container">
+      <article>
+        <h1>Inline - Code</h1>
+        <p>
+          This is a test of the code-related inline classes found in
+          <span class="file">_inline.sass</span>.
+        </p>
 
-    <p>This is a test of the <code>code</code> element.</p>
-    <p>Here I am testing <code class="cmd">the cmd class</code>.</p>
+        <p>This is a test of the <code>code</code> element.</p>
+        <p>Here I am testing <code class="cmd">the cmd class</code>.</p>
 
-    <pre>Make sure <code>code</code> and <code class="cmd">commands</code> don't have extra formatting inside <code>pre</code>.</pre>
+        <pre>Make sure <code>code</code> and <code class="cmd">commands</code> don't have extra formatting inside <code>pre</code>.</pre>
 
-    <h2>Check <code>code</code> font size inside headings</h2>
+        <h2>Check <code>code</code> font size inside headings</h2>
 
-    <p>Also watch out <a href="#">for <code>code</code> in</a> links
-      and <a href="#"><code>code</code></a> links.</p>
+        <p>
+          Also watch out <a href="#">for <code>code</code> in</a> links and
+          <a href="#"><code>code</code></a> links.
+        </p>
 
-    <p>Also, there are <a href="#"><code class="cmd">command</code></a> links.</p>
+        <p>
+          Also, there are <a href="#"><code class="cmd">command</code></a> links.
+        </p>
 
-    <!--
+        <!--
         span.file
         span.input,output,error,prompt
         span.sys
         span.var
         code.var
       -->
-
 
     <!-- FIXME below -->
 
